--- a/Mag Generate Shadows/Packages/manifest.json
+++ b/Mag Generate Shadows/Packages/manifest.json
@@ -8,11 +8,12 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.render-pipelines.high-definition": "14.0.8",
+    "com.unity.render-pipelines.high-definition-config": "14.0.8",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.9.1",
+    "com.unity.visualscripting": "1.9.4",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.xr.management": "4.4.1",
     "com.unity.modules.ai": "1.0.0",
