--- a/Mag Generate Shadows/Packages/manifest.json
+++ b/Mag Generate Shadows/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.inputsystem": "1.7.0",
     "com.unity.render-pipelines.high-definition": "14.0.11",
     "com.unity.render-pipelines.high-definition-config": "14.0.11",
+    "com.unity.rendering.denoising": "1.0.2",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.timeline": "1.7.6",
